# EMCompute

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: EMCompute.h  main.c  makefile
header_files/: EMCompute.h  EMCompute.hpp  EMCompute.pyx
src/: configuration.rs  gpu_device.rs  lib.rs  util.rs
