[package]
name = "EMCompute"
version = "3.0.0"
edition = "2021"
authors = ["ElectroMutex"]
description = "fast , simple and cross-platform parallel computing library"
license = "MIT"
documentation = "https://docs.rs/EMCompute/latest/EMCompute/"
homepage = "https://github.com/SkillfulElectro/EMCompute.git"
repository = "https://github.com/SkillfulElectro/EMCompute.git"
readme = "README.md"
keywords = ["GPGPU" , "cross-platform" , "parallel" , "computing" , "fast"]
categories = ["concurrency"]

[lib]
name = "EMCompute"
crate-type = ["cdylib" , "lib"]

[dependencies]
wgpu = "22"
pollster = "0.3"
flume = "0.11"
rayon = "1.10"

[build-dependencies]
cbindgen = "0.27"
